--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "eslint-config-tfd",
   "version": "1.0.0",
+  "private": true,
   "description": "ESLint TFD config",
   "main": "index.js",
   "author": "Pieter Janssen <pieter.janssen@thefrontdoor.nl>",
